updated webapp logout page's recommended URLs

--- a/web/src/python/nimbusweb/portal/templates/nimbus/logout.html
+++ b/web/src/python/nimbusweb/portal/templates/nimbus/logout.html
@@ -7,8 +7,8 @@
       Popular links:
    </p>
    <ul>
-       <li><a href="http://workspace.globus.org/clouds/cloudquickstart.html">Cloud client quickstart</a></li>
-       <li><a href="http://workspace.globus.org/vm/">Nimbus documentation</a></li>
+       <li><a href="http://www.nimbusproject.org/docs/?doc=current/clouds/cloudquickstart.html">Cloud client quickstart</a></li>
+       <li><a href="http://www.nimbusproject.org/docs/">Nimbus documentation</a></li>
    </ul>
    <p>
         Or, <a href="/nimbus/accounts/login?next=/nimbus/profile/">log in</a> again.
