--- a/web/src/python/nimbusweb/portal/static/base.css
+++ b/web/src/python/nimbusweb/portal/static/base.css
@@ -212,3 +212,29 @@ div.lrow span.finput {
   width: 250px;
   text-align: left;
 }
+
+ul#createmethods  {
+  text-align:center;
+}
+ul#createmethods li {
+  list-style:none;
+  margin:25px 200px;
+  padding:4px 0px;
+  background-color:#f5f5f5;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  -moz-box-shadow:0 0 6px #888;
+  -webkit-box-shadow:0 0 8px #888;
+
+}
+ul#createmethods p {
+  margin:2px;
+}
+p.method {
+  color:#000;
+  font-size:125%;
+}
+p.details {
+  color:#8f8f8f;
+  font-size:75%;
+}
