--- a/web/src/python/nimbusweb/portal/templates/usercreate/index.html
+++ b/web/src/python/nimbusweb/portal/templates/usercreate/index.html
@@ -1,5 +1,6 @@
 
 {% extends "base.html" %}
+	{% block title %}Create a new User{% endblock %}
 {% block content %}
     <h1>Create a new User.</h1>
     <h3>Please choose one of the following methods:</h3>
