Added header to base template.

--- a/web/src/python/nimbusweb/portal/templates/base.html
+++ b/web/src/python/nimbusweb/portal/templates/base.html
@@ -22,10 +22,9 @@
 
 <body id="home">
 
-    <header>
-        <a id="logo" href="/nimbus">Home</a>
-    </header>
-    
+    <h1>Nimbus</h1>
+    <a id="logo" href="/nimbus">Home</a>
+
     <hr id="headerborder">
     
     {% if flash_msg %}
