Fixed bug in profile template.

--- a/web/src/python/nimbusweb/portal/templates/nimbus/profile.html
+++ b/web/src/python/nimbusweb/portal/templates/nimbus/profile.html
@@ -29,7 +29,7 @@
     
     <h3>Your credentials</h3>
     
-    {% if cert_present or key_present or query_present %}
+    {% if cert_present or key_present or access_present %}
     <div id="credentials_container">
         <div class="credentials_box">
             <h4>X.509 certificate</h4>
