use nice newer URLs thanks to David LaBillionaire

--- a/web/src/python/nimbusweb/portal/templates/nimbus/logout.html
+++ b/web/src/python/nimbusweb/portal/templates/nimbus/logout.html
@@ -7,7 +7,7 @@
       Popular links:
    </p>
    <ul>
-       <li><a href="http://www.nimbusproject.org/docs/?doc=current/clouds/cloudquickstart.html">Cloud client quickstart</a></li>
+       <li><a href="http://www.nimbusproject.org/docs/current/clouds/cloudquickstart.html">Cloud client quickstart</a></li>
        <li><a href="http://www.nimbusproject.org/docs/">Nimbus documentation</a></li>
    </ul>
    <p>
