--- a/web/src/python/nimbusweb/portal/templates/nimbus/profile.html
+++ b/web/src/python/nimbusweb/portal/templates/nimbus/profile.html
@@ -78,7 +78,7 @@
                     <div><samp>chmod 600 ~/.globus/userkey.pem</samp></div>
                 </li>
                 <li>Follow the
-                    <a href="http://www.nimbusproject.org/docs/?doc=current/clouds/cloudquickstart.html">
+                    <a href="http://www.nimbusproject.org/docs/current/clouds/cloudquickstart.html">
                         cloud client quickstart</a>.</li>
             </ol>
             {% endif %}
@@ -96,7 +96,7 @@
             <p>
                 Access tokens are used for the Nimbus EC2 Query API interface.
                 For information on using these tokens, check the
-                <a href="http://www.nimbusproject.org/docs/?doc=current/elclients.html#boto">documentation</a>.
+                <a href="http://www.nimbusproject.org/docs/current/elclients.html#boto">documentation</a>.
             </p>
             <div class="lrow" id="accesskey">
                 <span class="flabel">Key</span>
