--- a/web/src/python/nimbusweb/portal/templates/nimbus/profile.html
+++ b/web/src/python/nimbusweb/portal/templates/nimbus/profile.html
@@ -125,7 +125,11 @@
             </p>
             {% endif %}
             <div class="lrow" id="accesskey">
-                <span class="flabel">Key</span>
+                <span class="flabel">Canonical</span>
+                <span class="copybox">{{ canonical_id }}</span>
+            </div>
+            <div class="lrow" id="accesskey">
+                <span class="flabel">User ID</span>
                 <span class="copybox">{{ access_key }}</span>
             </div>
             <div class="lrow" id="accesssecret">
